--- a/css/bg2.css
+++ b/css/bg2.css
@@ -1,10 +1,17 @@
-* { box-sizing: border-box; }
+* {
+  box-sizing: border-box;
+}
+
 .video-background {
-  background: #000;
+  background: #ff80aa;
   position: fixed;
-  top: 0; right: 0; bottom: 0; left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   z-index: -99;
 }
+
 .video-foreground,
 .video-background iframe {
   position: absolute;
@@ -14,16 +21,34 @@
   height: 100%;
   pointer-events: none;
 }
+
 @media (min-aspect-ratio: 16/9) {
-  .video-foreground { height: 300%; top: -100%; }
+  .video-foreground {
+    height: 300%;
+    top: -100%;
+  }
 }
+
 @media (max-aspect-ratio: 16/9) {
-  .video-foreground { width: 300%; left: -100%; }
+  .video-foreground {
+    width: 300%;
+    left: -100%;
+  }
 }
+
 @media all and (max-width: 600px) {
-.vid-info { width: 50%; padding: .5rem; }
-.vid-info h1 { margin-bottom: .2rem; }
+  .vid-info {
+    width: 50%;
+    padding: .5rem;
+  }
+
+  .vid-info h1 {
+    margin-bottom: .2rem;
+  }
 }
+
 @media all and (max-width: 500px) {
-.vid-info .acronym { display: none; }
+  .vid-info .acronym {
+    display: none;
+  }
 }
